# genAITemplate

genAITemplate/notebook/: local.ipynb
genAITemplate/src/apis/chat/: bootstrapper.py  config.py  dependencies.py  main.py  pyproject.toml
genAITemplate/src/apis/chat/contract/: __init__.py  chat_request.py
genAITemplate/src/apis/chat/factories/: agent_factory.py
genAITemplate/src/apis/chat/infrastructure/: __init__.py  enum.py
genAITemplate/src/apis/chat/models/: __init__.py  message.py
genAITemplate/src/apis/chat/routes/: __init__.py  chat.py  thread.py
genAITemplate/src/apis/chat/services/: __init__.py  base_agent.py  local_agent.py
genAITemplate/src/web/: angular.json  package-lock.json  package.json
genAITemplate/src/web/src/: index.html  styles.css
genAITemplate/src/web/src/app/: app.css  app.html  app.ts
genAITemplate/src/web/src/app/components/chat/: chat.css  chat.html
genAITemplate/src/web/src/app/models/: message.ts  thread.ts
genAITemplate/src/web/src/app/services/: chat.service.ts  state.service.ts
genAITemplate/src/web/src/components/chat/: chat.css  chat.html  chat.ts
genAITemplate/src/web/src/components/header/: header.css  header.html
genAITemplate/src/web/src/components/sidebar/: sidebar.css  sidebar.html  sidebar.ts
genAITemplate/src/webui/: index.html
genAITemplate/src/webui/css/: styles.css
genAITemplate/src/webui/js/: app.js
genAITemplate/src/webui/js/components/: AppHeader.js  ChatHeader.js  ChatWindow.js  MessageInput.js  MessageList.js  Sidebar.js
genAITemplate/src/webui/js/services/: ChatService.js
(+9 files in other folders)
